# cmakehelper

./: .gitignore  README.md
cmakehelper/1/: package-lock.json  package.json
cmakehelper/1/src/: extension.ts
cmakehelper/1/src/lib/cmakehelper/: cmakehelper.ts
test_proj/: CMakeLists.txt
test_proj/src/: taskA.cpp
